# cookiecutter-hypermodern-python-instance

./: .cookiecutter.json  .cruft.json  .editorconfig  .flake8  .pre-commit-config.yaml  CODE_OF_CONDUCT.rst  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  README.md  README.rst  bandit.yml  cutty.json  mypy.ini  noxfile.py  pyproject.toml
.dependabot/: config.yml
.github/: dependabot.yml
.github/workflows/: constraints.txt  coverage.yml  docs.yml  documentation.yml  pre-commit.yml  release.yml  retrocookie.yml  test-pypi.yml  tests.yml
docs/: CONTRIBUTING.md  conf.py  index.md  index.rst  reference.md  reference.rst  requirements.txt  usage.md  usage.rst
src/cookiecutter_hypermodern_python_instance/: __init__.py  __main__.py  console.py
tests/: __init__.py  test_console.py  test_main.py
