[tool.poetry]
name = "cookiecutter-hypermodern-python-instance"
version = "0.0.0"
description = "Cookiecutter Hypermodern Python Instance"
authors = ["Claudio Jolowicz <mail@claudiojolowicz.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/cjolowicz/cookiecutter-hypermodern-python-instance"
repository = "https://github.com/cjolowicz/cookiecutter-hypermodern-python-instance"
documentation = "https://cookiecutter-hypermodern-python-instance.readthedocs.io"

[tool.poetry.urls]
Changelog = "https://github.com/cjolowicz/cookiecutter-hypermodern-python-instance/releases"

[tool.poetry.dependencies]
python = "^3.6.1"
click = "^7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
coverage = {extras = ["toml"], version = "^5.1"}
safety = "^1.9.0"
mypy = "^0.780"
typeguard = "^2.9.0"
xdoctest = "^0.12.0"
sphinx = "^3.0.4"
sphinx-autobuild = "^0.7.1"
pre-commit = "^2.4.0"

[tool.poetry.scripts]
cookiecutter-hypermodern-python-instance = "cookiecutter_hypermodern_python_instance.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["cookiecutter_hypermodern_python_instance"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
