[tool.poetry]
name = "cookiecutter-hypermodern-python-instance"
version = "2021.11.10"
description = "Cookiecutter Hypermodern Python Instance"
authors = ["Claudio Jolowicz <mail@claudiojolowicz.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/cjolowicz/cookiecutter-hypermodern-python-instance"
repository = "https://github.com/cjolowicz/cookiecutter-hypermodern-python-instance"
documentation = "https://cookiecutter-hypermodern-python-instance.readthedocs.io"
classifiers = [
    "Development Status :: 1 - Planning",
]

[tool.poetry.urls]
Changelog = "https://github.com/cjolowicz/cookiecutter-hypermodern-python-instance/releases"

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.0.1"

[tool.poetry.group.pre-commit]
optional = true

[tool.poetry.group.pre-commit.dependencies]
black = ">=21.10b0"
darglint = "^1.8.1"
flake8 = "^4.0.1"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^21.9.2"
flake8-docstrings = "^1.6.0"
flake8-rst-docstrings = "^0.2.3"
pep8-naming = "^0.12.1"
pre-commit = "^2.15.0"
pre-commit-hooks = "^4.0.1"
pyupgrade = "^2.29.0"
reorder-python-imports = "^2.6.0"
setuptools = "^58.5.3"

[tool.poetry.group.safety]
optional = true

[tool.poetry.group.safety.dependencies]
safety = "^1.10.3"

[tool.poetry.group.coverage]
optional = true

[tool.poetry.group.coverage.dependencies]
coverage = {extras = ["toml"], version = "^6.1"}

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.5"
mypy = "^0.910"
typeguard = "^2.13.0"
xdoctest = {extras = ["colors"], version = "^0.15.10"}
sphinx = "^4.3.0"
sphinx-autobuild = ">=2021.3.14"
sphinx-click = "^3.0.2"
Pygments = "^2.10.0"
furo = ">=2021.11.12"

[tool.poetry.scripts]
cookiecutter-hypermodern-python-instance = "cookiecutter_hypermodern_python_instance.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["cookiecutter_hypermodern_python_instance"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
